# WikiScraper_Rust

wiki_scraper/: Cargo.toml  urls.db
wiki_scraper/src/: database.rs  main.rs  scraper.rs  utils.rs
